--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
   },
   "homepage": "https://github.com/JakeKo/Dex#readme",
   "devDependencies": {
+    "gulp-typescript": "^3.2.3",
     "tap-spec": "^4.1.1",
-    "tape": "^4.8.0"
+    "tape": "^4.8.0",
+    "typescript": "^2.6.2"
   }
 }
