Converted heap class to typsecript standard

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Dex is web framework that I am developing in my free time which implements your standard Data Structures 101 and Discrete Math 101 ideas. There are probably other *better* frameworks out there. But this one is mine.",
   "main": "test.js",
   "scripts": {
-    "test": "tape test/binary_search_tree.test.js | tap-spec"
+    "test": "tape test/heap.test.js | tap-spec"
   },
   "repository": {
     "type": "git",
