--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,6 +10,7 @@
         // "strict": true
     },
     "include": [
+        "./ts/priority_queue.ts",
         "./ts/heap.ts",
         "./ts/utility.ts",
     ]
