--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "Dex is web framework that I am developing in my free time which implements your standard Data Structures 101 and Discrete Math 101 ideas. There are probably other *better* frameworks out there. But this one is mine.",
   "main": "test.js",
   "scripts": {
-    "build": "gulp",
-    "test": "gulp test"
+    "build": "tsc",
+    "test": "tap ./test/*.test.js"
   },
   "repository": {
     "type": "git",
@@ -18,9 +18,7 @@
   },
   "homepage": "https://github.com/JakeKo/Dex#readme",
   "devDependencies": {
-    "gulp": "^3.9.1",
-    "gulp-tape": "0.0.9",
-    "gulp-typescript": "^4.0.0-alpha.1",
+    "tap-spec": "^4.1.1",
     "tape": "^4.8.0",
     "typescript": "^2.6.2"
   }
