--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "test.js",
   "scripts": {
     "build": "tsc",
-    "test": "tap ./test/*.test.js"
+    "test": "tape ./test/*.test.js | tap-spec"
   },
   "repository": {
     "type": "git",
